<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/player_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_timeline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:thumbTint="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_player_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="00:00"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/sb_timeline"
                app:layout_constraintStart_toStartOf="@+id/sb_timeline"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/duration_unknown"
                app:layout_constraintTop_toBottomOf="@+id/sb_timeline"
                app:layout_constraintEnd_toEndOf="@+id/sb_timeline"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/ic_player_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sb_timeline" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_play_rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/ic_player_fast_rewind"
                app:layout_constraintEnd_toStartOf="@+id/ib_play"
                app:layout_constraintTop_toBottomOf="@+id/sb_timeline" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_play_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/ic_player_fast_forward"
                app:layout_constraintStart_toEndOf="@+id/ib_play"
                app:layout_constraintTop_toBottomOf="@+id/sb_timeline" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/player_rate_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@+id/player_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_half"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_half"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_normal"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_normal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_one_half"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_one_half"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_two"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_two"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>